<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/escolha_botoes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageResultado" android:layout_marginTop="24dp"
            android:textSize="21sp" android:id="@+id/textResultado"/>
    <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp" app:srcCompat="@drawable/padrao" android:id="@+id/imageResultado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="24dp" android:contentDescription="@string/escolha_do_app"/>
    <TextView
            android:text="@string/escolha_do_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp" android:textSize="21sp"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/tesoura" android:id="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView3" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textResultado"
            android:layout_marginTop="32dp" android:contentDescription="@string/tesoura"
            android:onClick="selecionarTesoura"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/pedra" android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageView3"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textResultado"
            android:contentDescription="@string/pedra" android:onClick="selecionarPedra"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/papel" android:id="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/imageView4" app:layout_constraintTop_toBottomOf="@+id/textResultado"
            android:layout_marginTop="32dp" android:contentDescription="@string/papel"
            android:onClick="selecionarPapel"/>

</androidx.constraintlayout.widget.ConstraintLayout>